# cohi-chat

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  README.md  alembic.ini  docker-compose.chat.prod.yml  docker-compose.prod.yml  docker-compose.yml  local.db  pyproject.toml  settings.json  test.db
.claude/: issue-55-timeslot-migration.md  settings.json  settings.local.json
.codex/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-push
.tmp/: backend-bootrun.out  last-request-id.txt
alembic/: env.py  script.py.mako
appserver/: README.md  app.py  db.py
backend/: .dockerignore  .gitignore  Dockerfile  build.gradle
chat/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  schema.sql
docs/: BACKEND.md  FRONTEND.md  TESTING.md  chat-poll-follow-up.md  cloudfront-s3-alb-deployment-playbook.md  cohi-chat-contribution-summary.md  database-separation-strategy.md  frontend-routes.md  observability-logging-standard.md  observability-operations-guide.md  plan-presigned-upload.md  supabase-migration.md  zero-downtime-deployment.md
elk/: ELK-TESTING-GUIDE.md  README.md
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  .prettierrc  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  screenshot.ts  vite.config.ts  vitest.config.ts
infra/: README.md
monitoring/: README.md
nginx/: chat-upstream.conf  nginx.prod.conf  upstream.conf
scripts/: blue-green-common.sh  (+6 more)
(+951 files in other folders)
